# Point to our macro directory and pick up user flags from the environment
ACLOCAL_AMFLAGS  = -I m4 ${ACLOCAL_FLAGS}

# -- src/ ----------------------------
cangjie_PYTHON = \
	src/cangjie/__init__.py \
	$(NULL)
cangjiedir = $(pkgpyexecdir)

pkgpyexec_LTLIBRARIES = \
	_core.la \
	errors.la \
	filters.la \
	versions.la \
	$(NULL)


nodist__core_la_SOURCES = \
	src/cangjie/_core.c \
	$(NULL)
_core_la_CFLAGS = $(LIBCANGJIE_CFLAGS) $(PYTHON_INCLUDE)
_core_la_LDFLAGS = -avoid-version -module
_core_la_LIBADD = $(LIBCANGJIE_LIBS)

nodist_errors_la_SOURCES = \
	src/cangjie/errors.c \
	$(NULL)
errors_la_CFLAGS = $(LIBCANGJIE_CFLAGS) $(PYTHON_INCLUDE)
errors_la_LDFLAGS = -avoid-version -module
errors_la_LIBADD = $(LIBCANGJIE_LIBS)

nodist_filters_la_SOURCES = \
	src/cangjie/filters.c \
	$(NULL)
filters_la_CFLAGS = $(LIBCANGJIE_CFLAGS) $(PYTHON_INCLUDE)
filters_la_LDFLAGS = -avoid-version -module
filters_la_LIBADD = $(LIBCANGJIE_LIBS)

nodist_versions_la_SOURCES = \
	src/cangjie/versions.c \
	$(NULL)
versions_la_CFLAGS = $(LIBCANGJIE_CFLAGS) $(PYTHON_INCLUDE)
versions_la_LDFLAGS = -avoid-version -module
versions_la_LIBADD = $(LIBCANGJIE_LIBS)

pkgpyexecdir = $(pyexecdir)/cangjie

src/cangjie/_core.c: src/cangjie/_core.pyx src/cangjie/_core.pxd
	$(MKDIR_P) src/cangjie
	$(CYTHON) -3 --verbose -o $@ $(srcdir)/src/cangjie/_core.pyx

src/cangjie/errors.c: src/cangjie/errors.pyx src/cangjie/_core.pxd
	$(MKDIR_P) src/cangjie
	$(CYTHON) -3 --verbose -o $@ $(srcdir)/src/cangjie/errors.pyx

src/cangjie/filters.c: src/cangjie/filters.pyx src/cangjie/_core.pxd
	$(MKDIR_P) src/cangjie
	$(CYTHON) -3 --verbose -o $@ $(srcdir)/src/cangjie/filters.pyx

src/cangjie/versions.c: src/cangjie/versions.pyx src/cangjie/_core.pxd
	$(MKDIR_P) src/cangjie
	$(CYTHON) -3 --verbose -o $@ $(srcdir)/src/cangjie/versions.pyx

# -- Testing -------------------------
TESTS = tests/run_tests

tests/run_tests: tests/run_tests.in
	$(MKDIR_P) tests
	sed -e 's&@PYTHON_BIN@&$(PYTHON)&g' \
	    -e 's&@SRCDIR@&$(srcdir)&g' \
	    -e 's&@BUILDDIR@&$(builddir)&g' $< > $@
	chmod +x $@

# -- Common --------------------------
AUTHORS:
	@if test -d "$(srcdir)/.git"; then \
	    echo Creating $@ && \
	    ( cd "$(top_srcdir)" && \
	      echo -e '# Generated by Makefile. Do not edit.\n#'; \
	      echo -e '# pycangjie was written by these people:\n'; \
	      git log --no-merges --pretty=format:"%an <%ae>" \
	          | sort | uniq ) > $@.tmp && mv -f $@.tmp $@ \
	    || ( rm -f $@.tmp ; echo Failed to generate $@ >&2 ); \
	fi

CLEANFILES = \
	src/cangjie/*.c \
	tests/run_tests \
	$(NULL)

EXTRA_DIST = \
	autogen.sh \
	README.md \
	src/cangjie/_core.pyx \
	src/cangjie/_core.pxd \
	src/cangjie/errors.pyx \
	src/cangjie/filters.pyx \
	src/cangjie/versions.pyx \
	tests/run_tests.in \
	tests/__init__.py \
	$(wildcard $(srcdir)/tests/test_*.py) \
	$(NULL)

.PHONY: AUTHORS
